; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/optimizer/util/extr_tlist.c_add_new_column_to_pathtarget.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/optimizer/util/extr_tlist.c_add_new_column_to_pathtarget.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @add_new_column_to_pathtarget(%struct.TYPE_4__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @list_member(i32 %7, i32* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %15, label %11

11:                                               ; preds = %2
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @add_column_to_pathtarget(%struct.TYPE_4__* %12, i32* %13, i32 0)
  br label %15

15:                                               ; preds = %11, %2
  ret void
}

declare dso_local i32 @list_member(i32, i32*) #1

declare dso_local i32 @add_column_to_pathtarget(%struct.TYPE_4__*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
